common/gitea/gitea.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socat-proxy
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socat-proxy
  template:
    metadata:
      labels:
        app: socat-proxy
    spec:
      containers:
        - name: socat
          image: alpine/socat
          args: ["TCP-LISTEN:8080,fork,reuseaddr", "TCP:192.168.0.11:3001"]
          ports:
            - containerPort: 8080
